--- a/for-sorting/Lesson 1/unit-12/innerHTML.html
+++ b/for-sorting/Lesson 1/unit-12/innerHTML.html
@@ -1,7 +1,18 @@
-<div class="greeting">
-    <span class="message">Hello!</span>
-</div>
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <div class="greeting">
+        <span class="message">Hello!</span>
+    </div>
+</body>
+</html>
+<!-- <script>
     const greeting = document.querySelector('.greeting');
     const message = document.querySelector('.message');
 
@@ -19,4 +30,4 @@
             alert(1);
         </script>
     `; // ...
-</script>
+</script> -->
