--- a/for-sorting/Lesson 1/unit-23/webpack-example/index.html
+++ b/for-sorting/Lesson 1/unit-23/webpack-example/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./dist/main.css">
 </head>
 <body>
+    <div id="root"></div>
     <script src="./dist/bundle.js" async></script>
 </body>
 </html>
